Header and footer revised in IE9. Problems solved  in IE9 with normalize.css. Footer aligned, issue #3 95%

--- a/code/app/styles/styles.css
+++ b/code/app/styles/styles.css
@@ -64,7 +64,7 @@ TOP HEADER - HOME
 
 .header-home {
   float: left;
-  margin: 116px 0 80px;
+  margin: 116px 0 77px;
   padding: 0;
   width: 100%;
   
@@ -135,7 +135,7 @@ footer {
   border-top: 1px solid #252525;
   padding-top: 32px;
   font-size: 13px;
-  
+
 }
 
 footer h5 {
@@ -145,8 +145,15 @@ footer h5 {
   
 }
 
+.footer-van, .footer-twit, .footer-inst {
+  margin: 0;
+  display: inline-block;
+  margin-bottom: 32px;
+
+}
+
 .footer-van, .footer-inst {
-  width: 385px;
+  width: 31%;
   text-align: center;
   
 }
@@ -179,7 +186,8 @@ footer h5 {
 }
 
 .footer-twit {
-  width: 330px;
+  width: 31%;
+  height:179px;
   text-align: center;
   padding: 33px 34px;
   border-left: 1px solid #d0d0d0;
@@ -211,6 +219,10 @@ footer h5 {
     
 }
 
+.footer-twit, .footer-inst {
+  vertical-align: top;
+}
+
 .footer-inst {
   padding: 33px 0;
 }
@@ -225,7 +237,7 @@ footer h5 {
 }
 
 .footer-inst li {
-  width: 119px;
+  width: 110px;
   height: 77px;
   background-color: #858585;
   
@@ -249,5 +261,46 @@ footer h5 {
 .footer-copy p {
   margin-top: 0;
   margin-bottom: 27px;
+  
+}
+
+/**********************************
+HOME - INTERNAL
+***********************************/
+
+.slogan {
+  width: 83%;
+  font-family: 'Playfair Display', serif;
+  font-style: italic;
+ 
+}
+
+.slogan p {
+  font-size: 22px;
+  letter-spacing: 0px;
+  line-height: 30px;
+  color: #252525;
+  margin: 0 0 30px 0;
+  
+}
+
+.slogan p strong {
+  font-weight: 700;
+  
+}
+
+.slogan a {
+  text-decoration: none;
+  font-size: 12px;
+  
+}
+
+.slogan a p {
+  width: 86px;
+  border-bottom: 1px solid #252525;
+  text-decoration: none;
+  letter-spacing: 1px;
+  line-height: 20px;
+  font-size: 12px;
   
 }
